--- a/src/components/FeaturedMovie/style.css
+++ b/src/components/FeaturedMovie/style.css
@@ -12,6 +12,12 @@
     width: inherit;
     height: inherit;
     background: linear-gradient(to right, #111 30%, transparent 70%);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding-left: 30px;
+    padding-bottom: 200px;
+    padding-top: 70px;
 }
 
 .featured-name {
@@ -25,7 +31,57 @@
     margin-top: 15px; 
 }
 
-.featured-points {
+.featured-points, 
+.featured-year, 
+.featured-seasons {
     display: inline-block;
+    margin-right: 15px;
+}
+
+.featured-points {
     color: #46d369;
+}
+
+.featured-description {
+    margin-top: 15px;
+    font-size: 20px;
+    color: #999;
+    max-width: 40%;
+}
+
+.featured-buttons {
+    margin-top: 15px;
+}
+
+.featured-watchbutton, .featured-moreinfo {
+    display: inline-block;
+    font-size: 20px;
+    font-weight: bold;
+    padding: 15px 25px;
+    border-radius: 5px;
+    text-decoration: none;
+    margin-right: 12px;
+    opacity: 1;
+    transition: all ease 0.2s;
+}
+
+.featured-watchbutton {
+    background-color: #fff;
+    color: #000;
+}
+
+.featured-moreinfo {
+    background-color: #333;
+    color: #fff;
+}
+
+.featured-watchbutton:hover, 
+.featured-moreinfo:hover {
+    opacity: 0.7;
+}
+
+.featured-genres {
+    margin-top: 15px;
+    font-size: 18px;
+    color: #999;
 }
