--- a/src/components/MovieRow/style.css
+++ b/src/components/MovieRow/style.css
@@ -3,16 +3,13 @@
 }
 
 .movieRow h2 {
-    margin: 0 0 0 30px;
+    margin: 0 0 2px 30px;
+    font-size: 27px;
 }
 
 .movieRow-listarea {
     overflow-x: hidden;
     padding-left: 30px;
-}
-
-.movieRow-list {
-    width: 9999999px;
 }
 
 .movieRow-item {
@@ -29,4 +26,33 @@
 .movieRow-item img:hover {
     transform: scale(1);
     cursor: pointer;
+}
+
+.movieRow-left,
+.movieRow-right {
+    position: absolute;
+    width: 40px;
+    height: 225px;
+    background-color: rgba(0, 0, 0, 0.6);
+    z-index: 99;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+    cursor: pointer;
+    opacity: 0;
+    transition: all ease 0.5s;
+}
+
+.movieRow:hover  .movieRow-left,
+.movieRow:hover .movieRow-right {
+    opacity: 1;
+}
+
+.movieRow-left {
+    left: 0;
+}
+
+.movieRow-right {
+    right: 0;
 }
