--- a/src/App.css
+++ b/src/App.css
@@ -34,3 +34,16 @@ footer a:hover{
     color: rgb(0, 156, 247);
 
 }
+
+.loading {
+    position: fixed;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 99;
+    background-color: #000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
