--- a/src/components/MovieRow/style.css
+++ b/src/components/MovieRow/style.css
@@ -7,6 +7,10 @@
     font-size: 27px;
 }
 
+.movieRow-list {
+    transition: all ease 0.5s;
+}
+
 .movieRow-listarea {
     overflow-x: hidden;
     padding-left: 30px;
@@ -55,4 +59,11 @@
 
 .movieRow-right {
     right: 0;
+}
+
+@media (max-width: 760px) {
+    .movieRow-left,
+    .movieRow-right {
+        opacity: 1;
+    }
 }
